<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PcBuilder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="saldo">Su configuracion actual costara:</string>
    <string name="cpu">CPU</string>
    <string name="gpu">Tarjeta de Video</string>
    <string name="motherboard">Tarjeta Madre</string>
    <string name="ram">Memoria</string>
    <string name="storage">Disco Duro</string>
    <string name="software">Sistema Operativo</string>
    <string name="title_activity_crear">Crear</string>
    <string name="crea">Crea tu PC!</string>
    <string name="final2">Su configuracion final costara:</string>
    <string name="hacerca">Hacerca de nosotros</string>
    <string name="mandar">Manda tu lista y su costo por correo</string>
    <string name="salvar">Salvar</string>
    <string name="precioInicial">0.0</string>
    <string name="title_activity_activity_two">Jajaja</string>

</resources>
